feat(vitest-config): change jest to vitest

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -8,24 +8,25 @@
 		"db:migrate:deploy": "prisma migrate deploy",
 		"db:migrate:dev": "prisma migrate dev",
 		"db:push": "prisma db push",
-		"dev": "tsup src/* --watch",
+		"db:seed": "bun src/seed.ts",
 		"format": "prisma format",
 		"db:generate": "prisma generate",
+		"db:migrate:reset": "prisma migrate reset --force",
 		"lint": "biome check",
-		"prebuild": "pnpm generate",
-		"predev": "pnpm generate",
+		"prebuild": "pnpm db:generate",
+		"predev": "pnpm db:generate",
 		"studio": "prisma studio"
 	},
 	"dependencies": {
 		"@prisma/client": "latest"
 	},
 	"devDependencies": {
+		"@types/bun": "^1.2.15",
+		"@types/node": "^22.14.0",
 		"@workspace/biome-config": "workspace:*",
 		"@workspace/typescript-config": "workspace:*",
 		"prisma": "latest",
 		"rimraf": "^5.0.5",
-		"tsup": "^8.0.2",
-		"tsx": "4.19.1",
 		"typescript": "5.5.4"
 	}
 }
