--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -26,19 +26,20 @@
 		"dev": "bunchee --watch",
 		"lint": "biome check src/",
 		"check-types": "tsc --noEmit",
-		"test": "jest"
+		"test": "vitest"
 	},
-	"jest": {
-		"preset": "@workspace/jest-presets/node"
+	"dependencies": {
+		"pino": "^8.19.0",
+		"pino-pretty": "^10.3.1",
+		"pino-roll": "^3.0.0"
 	},
 	"devDependencies": {
-		"@jest/globals": "^29.7.0",
 		"@workspace/biome-config": "workspace:*",
-		"@workspace/jest-presets": "workspace:*",
 		"@workspace/typescript-config": "workspace:*",
 		"@types/node": "^22.14.0",
 		"bunchee": "^6.4.0",
-		"jest": "^29.7.0",
-		"typescript": "5.8.2"
+		"typescript": "5.8.2",
+		"vitest": "^3.0.7",
+		"@workspace/vitest-config": "workspace:*"
 	}
 }
